<resources>
    <string name="app_name">Fiesty</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_in">Log In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="submit">Submit</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="hello">Hello,</string>
    <string name="image">image</string>
    <string name="your_stats_are">Your stats are:</string>
    <string name="add_new_building">Add new Building</string>
    <string name="building_name">Building name</string>
    <string name="building_address">Building address</string>
    <string name="energy_rate">Energy rate (kW/hr)</string>
    <string name="no_buildings">You have no buildings now</string>
    <string name="add_room">Add Room</string>
    <string name="edit">Edit</string>
    <string name="rooms">Rooms</string>
    <string name="name">Name:</string>
    <string name="devices">Devices:</string>
    <string name="no_room_data">There is no room data at the moment.</string>
    <string name="kwh">kWh</string>
    <string name="create_new_room">Create New Room</string>
    <string name="room_name">Room name</string>
    <string name="number_of_devices">Number of devices</string>
    <string name="save">Save</string>
    <string name="room_details">Room Details</string>
    <string name="add_device">Add Device</string>
    <string name="edit_room">Edit Room</string>
    <string name="start_time">Start Time:</string>
    <string name="device_rating">Device Rating</string>
    <string name="device_name">Device Name</string>
    <string name="end_time">End Time</string>
    <string name="create_device">Create Device</string>
    <string name="buildings">My Buildings</string>
    <string name="welcome_text">Hello, %1$s %2$s</string>
    <string name="energy_use_text">%.2f kWh </string>
    <string name="phone_number">Phone Number</string>
    <string name="device_details">Device Details</string>
    <string name="select_time">Select time</string>
    <string name="energy_use">Energy Use</string>
    <string name="enable_alarm">Enable alarm</string>
    <string name="enable_notification">Enable notification</string>
    <string name="total_energy_use">Total Energy Use:</string>
    <string name="there_is_no_device_data_at_the_moment">There is no device data at the moment</string>
    <string name="select_image">Select Image</string>
    <string name="logout">Logout</string>
    <string name="change_password">Change Password</string>
    <string name="profile">Profile</string>
    <string name="add_new">Add New</string>
    <string name="check_out">Check out your energy usage.</string>
    <string name="new_building">New Building</string>
</resources>