<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.home.HomeFragment">

    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/hello"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toStartOf="@+id/display_pic"
        app:layout_constraintStart_toStartOf="@+id/home_start_guideline"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/your_stats_are"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/home_start_guideline"
        app:layout_constraintTop_toTopOf="@+id/guideline5" />

    <com.mikhaellopez.circularimageview.CircularImageView
        android:id="@+id/display_pic"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/image"
        android:src="@drawable/ic_user"
        app:civ_border_color="@color/image_border_color"
        app:civ_border_width="3dp"
        app:civ_shadow_radius="10dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toStartOf="@+id/home_end_guideline"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/buildings"
        app:layout_constraintBottom_toTopOf="@+id/building_recycler"
        app:layout_constraintStart_toStartOf="@+id/home_start_guideline" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/building_recycler"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline7"
        app:layout_constraintEnd_toStartOf="@+id/home_end_guideline"
        app:layout_constraintStart_toStartOf="@+id/home_start_guideline"
        app:layout_constraintTop_toTopOf="@+id/guideline6" />

    <Button
        android:id="@+id/add_building"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/input_bg"
        android:text="@string/add_new_building"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/profile_btn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/home_start_guideline"
        app:layout_constraintTop_toTopOf="@+id/guideline7" />

    <Button
        android:id="@+id/profile_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/input_bg"
        android:text="@string/profile"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/add_building"
        app:layout_constraintEnd_toStartOf="@+id/home_end_guideline"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/add_building" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/home_start_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/home_end_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".45" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".85" />

    <TextView
        android:id="@+id/no_data_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_buildings"
        app:layout_constraintBottom_toBottomOf="@+id/building_recycler"
        app:layout_constraintEnd_toStartOf="@+id/home_end_guideline"
        app:layout_constraintStart_toStartOf="@+id/home_start_guideline"
        app:layout_constraintTop_toTopOf="@+id/building_recycler" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/total_energy_use"
        app:layout_constraintStart_toStartOf="@+id/home_start_guideline"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/total_energy_use_display"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView6"
        app:layout_constraintEnd_toStartOf="@+id/home_end_guideline"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        tools:text="TextView" />

</androidx.constraintlayout.widget.ConstraintLayout>